# presentations

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  done.txt  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
bank/: README.md
bank/decisions/: 0000-use-markdown-architectural-decision-records.md  README.md  adr_template.md  y_statement_template.md
bank/notes/: 2021-05-11.md  2021-08-25_iatbr-draft-1-notes.md
bank/procedures/: initial-repo-setup.md
docs/: index.md
notebooks/: README.md  _00_template.ipynb
notebooks/how-tos/: README.md
notebooks/prototypes/: README.md
notebooks/tutorials/: README.md
src/presentations/: __init__.py
src/presentations/newsfragments/: 10.added  5.added  6.added  8.added
visuals/: 2021-03-19_ASU_abstract-and-bio.md  2021-03-19_how-not-to-integrate-ml-and-dcm.md  LICENSE.md
visuals/checking-meets-dissertation/: 2021-08-31_checking-meets-dissertation-outline.md  2021-08-31_checking-meets-dissertation.md
visuals/docs/: 2021-03-19_how-not-to-integrate-ml-and-dcm.md
visuals/how-not-to-integrate-ml-and-dcm/: 2021-03-19_how-not-to-integrate-ml-and-dcm.css  2021-03-19_how-not-to-integrate-ml-and-dcm.md
visuals/indiv-choice/: 2021-08-17_individual-choice-models-outline.md  2021-08-17_individual-choice-models.md  abstract_and_bio.md
visuals/psych-optimization/: 2021-05-28_psych-optimization.md
visuals/zen-DS-maintenance/: 2021-05-11_zen-DS-maintenance.md  outline.md
